Penambahan fontawesome, portfolio baru, dan icon gitlab

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
+    <!-- Font Awesome icons -->
+    <link rel="stylesheet" href="/css/font-awesome.min.css" />
     <!-- Manual CSS -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -133,15 +135,81 @@
                       />
                       <h1 class="text-center">Landing Page Web Template</h1>
                       <p class="lead">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Explicabo quas, repellat non quasi deleniti labore dicta
-                        soluta sint nemo minima ex quibusdam! Doloremque,
-                        pariatur ratione?
+                        Template Landing Page sederhana yang dapat digunakan untuk membangun sebuah website seperti company profile dan lain sebagainya.
+                      </p>
+                      <p class="lead">Stack :</p>
+                      <p class="display-6">
+                        <i class="fa-brands fa-html5"></i>
+                        <i class="fa-brands fa-css3"></i>
+                        <i class="fa-brands fa-bootstrap"></i>
+                        <!-- <i class="fa-brands fa-php"></i> -->
                       </p>
                     </div>
                     <div class="card-footer text-center">
-                      <a href="https://gitlab.com/asidikrdn/template-landingpage" target="_blank" class="btn btn-outline-secondary mx-3">Lihat Repository</a>
-                      <a href="https://template-landingpage.netlify.app/" target="_blank" class="btn btn-outline-primary mx-3">Lihat Website</a>
+                      <a
+                        href="https://gitlab.com/asidikrdn/template-landingpage"
+                        target="_blank"
+                        class="btn btn-outline-secondary mx-3 my-2"
+                        >Lihat Repository</a
+                      >
+                      <a
+                        href="https://template-landingpage.netlify.app/"
+                        target="_blank"
+                        class="btn btn-outline-primary mx-3 my-2"
+                        >Lihat Website</a
+                      >
+                      <!-- <button class="btn btn-outline-dark">Lihat Website</button> -->
+                    </div>
+                  </div>
+                </div>
+                <div class="col-12 col-md-6 p-3">
+                  <div class="card">
+                    <div class="card-body">
+                      <img
+                        src="img/sistem-informasi-laundry.png"
+                        alt=""
+                        class="img-fluid mb-5"
+                      />
+                      <h1 class="text-center">Sistem Informasi Laundry</h1>
+                      <p class="lead">
+                        Aplikasi sederhana untuk mengelola usaha laundry. Fitur
+                        utama yang terdapat pada aplikasi ini diantaranya :
+                      </p>
+                      <ul class="lead">
+                        <li>Tampilan Dashboard</li>
+                        <li>Daftar Layanan</li>
+                        <li>Daftar Pelanggan</li>
+                        <li>Daftar Transaksi</li>
+                        <li>Daftar Petugas</li>
+                        <li>Cetak Invoice</li>
+                      </ul>
+                      <p class="lead">
+                        Pada aplikasi ini terdapat 2 role user, yaitu admin dan
+                        karyawan dimana masing-masing role memiliki hak akses
+                        yang berbeda. Informasi lebih lanjut dapat dilihat pada
+                        repository.
+                      </p>
+                      <p class="lead">Stack :</p>
+                      <p class="display-6">
+                        <i class="fa-brands fa-html5"></i>
+                        <i class="fa-brands fa-css3"></i>
+                        <i class="fa-brands fa-bootstrap"></i>
+                        <i class="fa-brands fa-php"></i>
+                      </p>
+                    </div>
+                    <div class="card-footer text-center">
+                      <a
+                        href="https://gitlab.com/asidikrdn/PPW_LaViola-Laundry"
+                        target="_blank"
+                        class="btn btn-outline-secondary mx-3 my-2"
+                        >Lihat Repository</a
+                      >
+                      <a
+                        href="https://project.bakulkode.web.id/laviola/ "
+                        target="_blank"
+                        class="btn btn-outline-primary mx-3 my-2"
+                        >Lihat Website</a
+                      >
                       <!-- <button class="btn btn-outline-dark">Lihat Website</button> -->
                     </div>
                   </div>
