--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
+    <!-- Font Awesome icons -->
+    <link rel="stylesheet" href="/css/font-awesome.min.css" />
     <!-- Manual CSS -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -176,6 +178,10 @@
                         <!-- GitHub -->
                         <a href="https://www.github.com/asidikrdn/" target="_blank" class="mx-1 text-decoration-none text-black">
                           <i class="bi-github h1"></i>
+                        </a>
+                        <!-- GitLab -->
+                        <a href="https://www.gitlab.com/asidikrdn/" target="_blank" class="mx-1 text-decoration-none text-black">
+                          <i class="fa-brands fa-gitlab h1"></i>
                         </a>
                         <!-- LinkedIn -->
                         <a href="https://www.linkedin.com/in/asidikrdn/" target="_blank" class="mx-1 text-decoration-none text-black">
