--- a/resume.html
+++ b/resume.html
@@ -17,6 +17,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
+    <!-- Font Awesome icons -->
+    <link rel="stylesheet" href="/css/font-awesome.min.css" />
     <!-- Manual CSS -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
